// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 63,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 148,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 140,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 50,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 280,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.1500000000000001,
  "hp": 190,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 7,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 19,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 6,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 11,
  "healMult": 1.33,
  "hp": 640,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 47,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 22,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 30,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 20.25,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 60,
  "evasionPct": 16.8,
  "extraAttackChancePct": 56,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 24,
  "magicDef": 7,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 112,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 38,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 30,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 5,
  "healMult": 1.7700000000000002,
  "hp": 835,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 7,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 10,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 55,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evasionPct": 2.7,
  "extraAttackChancePct": 0,
  "healMult": 1.31,
  "hp": 720,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 27,
  "magicDef": 7,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 0,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "a4b61cad67c59a54595bfd0d362d12ae071a1271",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "b2a9639deccb5840215c5702e92d7bc00cfa2748",
    "outcome": "win",
    "playerHp": 708,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "b92ce57660d6b81f2d187bdc678c3efdd3a74b98",
    "outcome": "win",
    "playerHp": 568,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "659e1d0de39e7e59490829150657aefdbc39e60c",
    "outcome": "win",
    "playerHp": 635,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "064affeddf90e87beded5668bca0a541414da5dc",
    "outcome": "win",
    "playerHp": 504,
    "playerMp": 501,
    "turns": 39,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "b6cc18d01e0039d998e5d49888c38a1741859816",
    "outcome": "win",
    "playerHp": 757,
    "playerMp": 227,
    "turns": 65,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "dfeda702243f5cc7613598d4061f7336e374321e",
    "outcome": "win",
    "playerHp": 830,
    "playerMp": 227,
    "turns": 75,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "81b809da84f7313846d7a355a333b70eaf70f640",
    "outcome": "win",
    "playerHp": 635,
    "playerMp": 501,
    "turns": 18,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "5fb7befe7988bc8894a076b0f3444657b7e571f4",
    "outcome": "win",
    "playerHp": 187,
    "playerMp": 92,
    "turns": 18,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "26a996325641c19a601a5ccbe3aff9167910b7fa",
    "outcome": "p1_win",
    "turns": 65,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "ad13b6a51d624ed2a535c79b9b57389b9000d193",
    "outcome": "p1_win",
    "turns": 41,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "1d348e97b35e1f472dadec7676e67d8c76e736b8",
    "outcome": "p1_win",
    "turns": 169,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "f7b8371132032fec242f92bb0c555a52983dbc30",
    "outcome": "win",
    "playerHp": 711,
    "playerMp": 227,
    "turns": 20,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "ad71cd81cea6e19c8bdbe44fe8e9f37ba7daaddf",
    "outcome": "win",
    "playerHp": 719,
    "playerMp": 227,
    "turns": 31,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "f28a21b0c9fa652fd337a3c10634859b6a7ba719",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 30,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "a1a5336a90d34dab9613376b66fae68cb3cc51fa",
    "outcome": "win",
    "playerHp": 536,
    "playerMp": 227,
    "turns": 59,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "ecdc0795cb76b1e7ef4bd2564041007fb0d2a183",
    "outcome": "win",
    "playerHp": 700,
    "playerMp": 227,
    "turns": 21,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "558ee9182354d1776d4802a08b3930445d533b0d",
    "outcome": "win",
    "playerHp": 702,
    "playerMp": 227,
    "turns": 28,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "703e0f7ac389ea832299579f9d485867f7440feb",
    "outcome": "win",
    "playerHp": 745,
    "playerMp": 227,
    "turns": 57,
  },
]
`;
